# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.108 2006/04/26 13:58:23 antarus Exp $

  26 Apr 2006; Alec Warner <antarus@gentoo.org>
  mozilla-thunderbird-1.0.8.ebuild:
  Stable on x86 wrt bug # 130888

  24 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-thunderbird-1.0.8.ebuild:
  Stable on sparc wrt security #130888

  23 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-thunderbird-1.5.0.2.ebuild:
  ppc stable, bug #130888

*mozilla-thunderbird-1.5.0.2 (23 Apr 2006)
*mozilla-thunderbird-1.0.8 (23 Apr 2006)

  23 Apr 2006; Jory A. Pratt <anarchy@gentoo.org>
  +files/mozilla-thunderbird-1.0.8-gcc-4.patch,
  +mozilla-thunderbird-1.0.8.ebuild, +mozilla-thunderbird-1.5.0.2.ebuild:
  revision bump to both 1.0.x and 1.5.x branch which includes security fixes

*mozilla-thunderbird-1.5-r3 (31 Mar 2006)

  31 Mar 2006; Jory A. Pratt <anarchy@gentoo.org>
  -mozilla-thunderbird-1.5.ebuild, -mozilla-thunderbird-1.5-r1.ebuild,
  -mozilla-thunderbird-1.5-r2.ebuild, +mozilla-thunderbird-1.5-r3.ebuild:
  ABI fix for third party extensions

  23 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  mozilla-thunderbird-1.5-r2.ebuild:
  Mark 1.5-r2 ~ia64

*mozilla-thunderbird-1.5-r2 (19 Mar 2006)

  19 Mar 2006; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-1.5-r2.ebuild:
  glibc-2.4 support wrt bug #125832

  06 Feb 2006; <anarchy@gentoo.org> mozilla-thunderbird-1.5-r1.ebuild:
  revision to patchset to incude makeopts patch

  02 Feb 2006; Luca Barbato <lu_zero@gentoo.org>
  mozilla-thunderbird-1.5-r1.ebuild:
  Marked ~ppc

*mozilla-thunderbird-1.5 (12 Jan 2006)

  12 Jan 2006; Jory A. Pratt <anarchy@gentoo.org>
  +files/firefox-1.1-uriloader-1.patch,
  +files/firefox-1.5-visibility-check.patch,
  +files/firefox-1.5-visibility-fix.patch, +files/pango-cairo-1.patch,