@@ -1,6 +1,6 @@
-MD5 25081844ca4292c4eeb8f55b1c8e3660 mozilla-thunderbird-1.5.0.2-patches-1.1.tar.bz2 29990
-RMD160 ad7078bf82757bc2503861ead0e64b83a579fe7b mozilla-thunderbird-1.5.0.2-patches-1.1.tar.bz2 29990
-SHA256 cb911773dba65fc17ccf55267dcc024c3da1a1b45424b575293bbdaa6ba309bf mozilla-thunderbird-1.5.0.2-patches-1.1.tar.bz2 29990
+MD5 778bef4d016f536ab6539c9c30ea7253 mozilla-thunderbird-1.5.0.2-patches-1.2.tar.bz2 30310
+RMD160 e4e0f2ccd314b58f8710bcc9ce45b927d7e8a2c6 mozilla-thunderbird-1.5.0.2-patches-1.2.tar.bz2 30310
+SHA256 22c67ef7ec994aa6137a95e5cb844429f48ff743641c5fe40e891ef8921006e3 mozilla-thunderbird-1.5.0.2-patches-1.2.tar.bz2 30310
 MD5 3f32b847330c9d58297147be19714962 thunderbird-1.5.0.2-source.tar.bz2 35880369
 RMD160 8aaf02c205b131a38fa0384fe6126eec325c3e9e thunderbird-1.5.0.2-source.tar.bz2 35880369
 SHA256 d01a4edef782ea0d86e7ed5899ffdd48998211d5e134e3e93b1a0f9e56198151 thunderbird-1.5.0.2-source.tar.bz2 35880369
